assets/css/style.scss
---
---

@import "{{ site.theme }}";

/* General*/

$azul_header: #2e7bcf; /*azul do tema em scss*/

ul{
	list-style: none;
}


/*header*/

header h1{
	font-size: 2.0rem;
}

header h2{
	font-size: 1.5rem;
}


/*Site footer*/
footer{
	font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
	background: $azul_header url(../images/header-bg.jpg) 0 0 repeat-x; /*esta imagem esta no tema architect*/
	color: #fff;

	/*Awesome how flexbox is easy and responsive*/
	display: flex;
	justify-content: space-around;
	flex-wrap: wrap;
}

footer a{
	color: #fff;
}
footer a:hover{
	color: #fff;
}

footer ul {/*reset to theme architect*/
	padding: 0;
	margin: 0;
}

footer .footer-col{
	margin: 10px;
}

footer .icon svg {
	display: inline-block;
	vertical-align: middle;
	width: 16px;
	height: 16px;
}

/* change color of icons svg through css*/
footer span svg path{
	fill: #fff;
}

footer .name-icon{
	vertical-align: top;
}

